# IncubatorMCP

./: .gitignore  AGENTS.md  IPMCMCP.md  Makefile  README.md  ipmc.skill  pyproject.toml  server.py
.github/workflows/: ci.yml
docs/: architecture.md  hosting.md
ipmc/: __init__.py  analysis.py  data.py  protocol.py  schemas.py  tools.py
tests/: fixtures.py  test_analysis.py  test_data.py  test_mcp_integration.py  test_protocol.py  test_tools.py
